--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
                 </div>
                 <div class="col-5">
                     <h2>O que é o ark?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">, ARK: Survival Evolved é um jogo que desafia o jogador a sobreviver em um mundo hostil, onde a inteligência, criatividade e capacidade de adaptação são essenciais. </p>
                 </div>
             </div>
         </section>
